src/test/ui/inference/issue-86162-1.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-86162-1.rs:7:5
   |
LL | fn foo(x: impl Clone) {}
   |                ----- required by this bound in `foo`
...
LL |     foo(gen()); //<- Do not suggest `foo::<impl Clone>()`!
   |     ^^^ cannot infer type for type parameter `impl Clone` declared on the function `foo`
   |
   = note: cannot satisfy `_: Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
